@@ -1,6 +1,12 @@
 package com.optimal.standard.service;
 
+import static com.optimal.standard.service.ApplicationAreaService.APPLICATION_AREA_NOT_FOUND_MESSAGE;
+import static com.optimal.standard.util.ConstructionSystemMapperUtils.toConstructionSystem;
+import static com.optimal.standard.util.ConstructionSystemMapperUtils.toResponseDTO;
+
 import com.optimal.standard.dto.ConstructionSystemDTO;
+import com.optimal.standard.dto.ConstructionSystemMaterialDTO;
+import com.optimal.standard.dto.ConstructionSystemMaterialPrices;
 import com.optimal.standard.dto.MaterialDTO;
 import com.optimal.standard.dto.ResponseConstructionSystemDTO;
 import com.optimal.standard.dto.TypeOfUseOfMaterial;
@@ -9,121 +15,163 @@ import com.optimal.standard.persistence.model.ApplicationArea;
 import com.optimal.standard.persistence.model.ConstructionSystem;
 import com.optimal.standard.persistence.model.ConstructionSystemMaterial;
 import com.optimal.standard.persistence.model.Material;
+import com.optimal.standard.persistence.model.TypeOfUse;
 import com.optimal.standard.persistence.repository.ConstructionSystemRepository;
-import com.optimal.standard.util.ConstructionSystemMapperUtils;
 import jakarta.persistence.EntityNotFoundException;
-import lombok.AllArgsConstructor;
-import org.springframework.stereotype.Service;
-
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
-
-import static com.optimal.standard.service.ApplicationAreaService.APPLICATION_AREA_NOT_FOUND_MESSAGE;
-import static com.optimal.standard.util.ConstructionSystemMapperUtils.toConstructionSystem;
+import lombok.AllArgsConstructor;
+import org.springframework.stereotype.Service;
 
 @Service
 @AllArgsConstructor
 public class ConstructionSystemService {
 
-    public static final String CONSTRUCTION_SYSTEM_NOT_FOUND_MESSAGE = "Construction system not found with ID: ";
+  public static final String CONSTRUCTION_SYSTEM_NOT_FOUND_MESSAGE = "Construction system not found with ID: ";
 
-    private final ApplicationAreaService applicationAreaService;
+  private final ApplicationAreaService applicationAreaService;
 
-    private final MaterialService materialService;
+  private final MaterialService materialService;
 
-    private final ConstructionSystemMaterialService constructionSystemMaterialService;
+  private final ConstructionSystemMaterialService constructionSystemMaterialService;
 
-    private final ConstructionSystemRepository constructionSystemRepository;
+  private final ConstructionSystemRepository constructionSystemRepository;
 
-    public void saveConstructionSystem(ConstructionSystemDTO request) {
-        Long applicationAreaId = request.getApplicationAreaId();
-        this.validateApplicationArea(applicationAreaId);
-        this.validateTypeOfUseOfMaterials(request.getMaterials());
+  private final GlobalVariableService globalVariableService;
 
-        ConstructionSystem constructionSystem = this.createConstructionSystem(applicationAreaId, request);
-        List<ConstructionSystemMaterial> constructionSystemMaterials = this.buildConstructionSystemMaterials(request, constructionSystem);
-        this.constructionSystemMaterialService.saveAllConstructionSystemMaterials(constructionSystemMaterials);
+  public void saveConstructionSystem(ConstructionSystemDTO request) {
+    Long applicationAreaId = request.getApplicationAreaId();
+    this.validateApplicationArea(applicationAreaId);
+    this.validateTypeOfUseOfMaterials(request.getMaterials());
+
+    ConstructionSystem constructionSystem = this.createConstructionSystem(applicationAreaId, request);
+    List<ConstructionSystemMaterial> constructionSystemMaterials = this.buildConstructionSystemMaterials(request, constructionSystem);
+    this.constructionSystemMaterialService.saveAllConstructionSystemMaterials(constructionSystemMaterials);
+  }
+
+  private ConstructionSystem createConstructionSystem(Long applicationAreaId, ConstructionSystemDTO request) {
+    ApplicationArea applicationArea = this.applicationAreaService.findApplicationAreaById(applicationAreaId);
+    return this.constructionSystemRepository.save(toConstructionSystem(request, applicationArea));
+  }
+
+  private ConstructionSystemMaterial buildConstructionSystemMaterial(TypeOfUseOfMaterial typeOfUseOfMaterial,
+      ConstructionSystem constructionSystem) {
+    Material material = this.materialService.findMaterialById(typeOfUseOfMaterial.getMaterialId());
+    return new ConstructionSystemMaterial(typeOfUseOfMaterial.getId(), material, constructionSystem, typeOfUseOfMaterial.getTypeOfUse(),
+        typeOfUseOfMaterial.getCoefficient(), typeOfUseOfMaterial.getCoefficientDescription(),
+        typeOfUseOfMaterial.getMaterialDescription());
+  }
+
+  private void validateApplicationArea(Long applicationAreaId) {
+    if (!this.applicationAreaService.existById(applicationAreaId)) {
+      throw new EntityNotFoundException(APPLICATION_AREA_NOT_FOUND_MESSAGE + applicationAreaId);
     }
+  }
 
-    private ConstructionSystem createConstructionSystem(Long applicationAreaId, ConstructionSystemDTO request) {
-        ApplicationArea applicationArea = this.applicationAreaService.findApplicationAreaById(applicationAreaId);
-        return this.constructionSystemRepository.save(toConstructionSystem(request, applicationArea));
+  private void validateTypeOfUseOfMaterials(List<TypeOfUseOfMaterial> typeOfUseOfMaterials) {
+    List<Long> materialIds = typeOfUseOfMaterials
+        .stream()
+        .map(TypeOfUseOfMaterial::getMaterialId)
+        .toList();
+
+    if (!new HashSet<>(this.materialService
+        .findAllByIds(materialIds)
+        .stream()
+        .map(MaterialDTO::getId)
+        .toList()).containsAll(materialIds)) {
+      throw new BadRequestException("Some of the materials provided do not exist");
     }
+  }
 
-    private ConstructionSystemMaterial buildConstructionSystemMaterial(TypeOfUseOfMaterial typeOfUseOfMaterial,
-                                                                       ConstructionSystem constructionSystem) {
-        Material material = this.materialService.findMaterialById(typeOfUseOfMaterial.getMaterialId());
-        return new ConstructionSystemMaterial(typeOfUseOfMaterial.getId(), material, constructionSystem, typeOfUseOfMaterial.getTypeOfUse(),
-                typeOfUseOfMaterial.getCoefficient(), typeOfUseOfMaterial.getCoefficientDescription(),
-                typeOfUseOfMaterial.getMaterialDescription());
-    }
+  public List<ResponseConstructionSystemDTO> findAll() {
+    return this.constructionSystemRepository
+        .findAll()
+        .stream()
+        .map(this::buildResponseConstructionSystemDTO)
+        .toList();
+  }
 
-    private void validateApplicationArea(Long applicationAreaId) {
-        if (!this.applicationAreaService.existById(applicationAreaId)) {
-            throw new EntityNotFoundException(APPLICATION_AREA_NOT_FOUND_MESSAGE + applicationAreaId);
-        }
-    }
+  public ResponseConstructionSystemDTO findById(Long id) {
+    return this.constructionSystemRepository
+        .findById(id)
+        .map(this::buildResponseConstructionSystemDTO)
+        .orElseThrow(() -> new EntityNotFoundException(CONSTRUCTION_SYSTEM_NOT_FOUND_MESSAGE + id));
+  }
 
-    private void validateTypeOfUseOfMaterials(List<TypeOfUseOfMaterial> typeOfUseOfMaterials) {
-        List<Long> materialIds = typeOfUseOfMaterials
-                .stream()
-                .map(TypeOfUseOfMaterial::getMaterialId)
-                .toList();
+  private ResponseConstructionSystemDTO buildResponseConstructionSystemDTO(ConstructionSystem constructionSystem) {
+    double totalPrice = this.getSystemTotalPrice(constructionSystem);
+    List<ConstructionSystemMaterialDTO> csm =
+        this.constructionSystemMaterialService.toConstructionSystemMaterialsDTO(constructionSystem.getConstructionSystemMaterials());
+    return toResponseDTO(constructionSystem, totalPrice, csm);
+  }
 
-        if (!new HashSet<>(this.materialService
-                .findAllByIds(materialIds)
-                .stream()
-                .map(MaterialDTO::getId)
-                .toList()).containsAll(materialIds)) {
-            throw new BadRequestException("Some of the materials provided do not exist");
-        }
-    }
+  public void updateConstructionSystem(Long id, ConstructionSystemDTO request) {
+    this.validateTypeOfUseOfMaterials(request.getMaterials());
+    Long applicationAreaId = request.getApplicationAreaId();
+    this.validateApplicationArea(applicationAreaId);
 
-    public List<ResponseConstructionSystemDTO> findAll() {
-        return this.constructionSystemRepository
-                .findAll()
-                .stream()
-                .map(ConstructionSystemMapperUtils::toResponseDTO)
-                .toList();
-    }
+    this.constructionSystemRepository
+        .findById(id)
+        .ifPresentOrElse(constructionSystemDatabase -> {
 
-    public ResponseConstructionSystemDTO findById(Long id) {
-        return this.constructionSystemRepository
-                .findById(id)
-                .map(ConstructionSystemMapperUtils::toResponseDTO)
-                .orElseThrow(() -> new EntityNotFoundException(CONSTRUCTION_SYSTEM_NOT_FOUND_MESSAGE + id));
-    }
+          ApplicationArea applicationArea = this.applicationAreaService.findApplicationAreaById(applicationAreaId);
+          ConstructionSystem constructionSystem = toConstructionSystem(request, applicationArea);
+          constructionSystem.setId(constructionSystemDatabase.getId());
 
-    public void updateConstructionSystem(Long id, ConstructionSystemDTO request) {
-        this.validateTypeOfUseOfMaterials(request.getMaterials());
-        Long applicationAreaId = request.getApplicationAreaId();
-        this.validateApplicationArea(applicationAreaId);
+          List<ConstructionSystemMaterial> constructionSystemMaterials = this.buildConstructionSystemMaterials(request, constructionSystem);
+          constructionSystem.setConstructionSystemMaterials(constructionSystemMaterials);
+          this.constructionSystemRepository.save(constructionSystem);
 
-        this.constructionSystemRepository
-                .findById(id)
-                .ifPresentOrElse(constructionSystemDatabase -> {
+        }, () -> {
+          throw new EntityNotFoundException(CONSTRUCTION_SYSTEM_NOT_FOUND_MESSAGE + id);
+        });
+  }
 
-                    ApplicationArea applicationArea = this.applicationAreaService.findApplicationAreaById(applicationAreaId);
-                    ConstructionSystem constructionSystem = toConstructionSystem(request, applicationArea);
-                    constructionSystem.setId(constructionSystemDatabase.getId());
+  private List<ConstructionSystemMaterial> buildConstructionSystemMaterials(ConstructionSystemDTO request,
+      ConstructionSystem constructionSystem) {
+    return request
+        .getMaterials()
+        .stream()
+        .map(typeOfUseOfMaterial -> this.buildConstructionSystemMaterial(typeOfUseOfMaterial, constructionSystem))
+        .collect(Collectors.toList());
+  }
 
-                    List<ConstructionSystemMaterial> constructionSystemMaterials = this.buildConstructionSystemMaterials(request, constructionSystem);
-                    constructionSystem.setConstructionSystemMaterials(constructionSystemMaterials);
-                    this.constructionSystemRepository.save(constructionSystem);
+  private double getSystemTotalPrice(ConstructionSystem constructionSystem) {
 
-                }, () -> {
-                    throw new EntityNotFoundException(CONSTRUCTION_SYSTEM_NOT_FOUND_MESSAGE + id);
-                });
-    }
+    AtomicReference<Double> totalPluginPrice = new AtomicReference<>(0.0);
+    double totalConsumption = constructionSystem.getTotalConsumption();
+    Map<TypeOfUse, ConstructionSystemMaterialPrices> materialPrices = constructionSystem
+        .getConstructionSystemMaterials()
+        .stream()
+        .filter(csm -> !TypeOfUse.PLUGIN_MATERIAL.equals(csm.getTypeOfUse()))
+        .collect(Collectors.toMap(ConstructionSystemMaterial::getTypeOfUse, this::buildConstructionSystemMaterialPrices));
 
-    private List<ConstructionSystemMaterial> buildConstructionSystemMaterials(ConstructionSystemDTO request,
-                                                                              ConstructionSystem constructionSystem) {
-        return request
-                .getMaterials()
-                .stream()
-                .map(typeOfUseOfMaterial -> this.buildConstructionSystemMaterial(typeOfUseOfMaterial, constructionSystem))
-                .collect(Collectors.toList());
-    }
+    List<ConstructionSystemMaterialPrices> pluginPrices = constructionSystem
+        .getConstructionSystemMaterials()
+        .stream()
+        .filter(csm -> TypeOfUse.PLUGIN_MATERIAL.equals(csm.getTypeOfUse()))
+        .map(this::buildConstructionSystemMaterialPrices)
+        .peek(csmp -> totalPluginPrice.accumulateAndGet((csmp.getUnitPrice() * csmp.getCoefficient()), Double::sum))
+        .toList();
+
+    double materialBasePrice = materialPrices
+        .get(TypeOfUse.BASE)
+        .getUnitPrice();
+    double totalMeshPrice = materialPrices
+        .get(TypeOfUse.TOTAL_MESH)
+        .getUnitPrice();
+    ConstructionSystemMaterialPrices partialMeshPrices = materialPrices.get(TypeOfUse.PARTIAL_MESH);
+    double partialMeshPrice = partialMeshPrices.getUnitPrice();
+    double coefficientPartialMesh = partialMeshPrices.getCoefficient();
+
+    return (materialBasePrice * totalConsumption) + totalMeshPrice + (partialMeshPrice * coefficientPartialMesh) + totalPluginPrice.get();
+  }
+
+  private ConstructionSystemMaterialPrices buildConstructionSystemMaterialPrices(ConstructionSystemMaterial csm) {
+    return new ConstructionSystemMaterialPrices(this.globalVariableService.getUnitPrice(csm.getMaterial()), csm.getCoefficient());
+  }
 
 }
